# doctor-advisor

./: .gitignore  MERMAID.md  README.md  evals_integration.py  main.py  observability.py  pyproject.toml
agents/appointment_requester/: __init__.py  evals.py  main.py  utils.py
agents/doctor_fetcher/: evals.py  mock_insurance_server.py
agents/doctor_selector/: __init__.py  evals.py  main.py
agents/shared/: __init__.py  models.py
agents/symptoms_triage/: __init__.py  diagnostics.md  evals.py  evals_memory.py  main.py  memory.py  utils.py
servers/: insurance_directory.py  insurance_server.py
