[project]
name = "capstone"
version = "0.1.0"
description = "Doctor recommendation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "langchain-text-splitters==1.1.2",
  "chromadb==1.5.8",
  "pydantic-ai-slim[anthropic,sentence-transformers]>=1.85.1",
  "pydantic-evals>=0.4.3",
  "torch>=2.11.0",
  "sentence-transformers>=5.4.1",
  "email-validator>=2.3.0",
  "mcp>=1.9.0",
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",
  "opentelemetry-sdk>=1.41.1",
  "opentelemetry-exporter-otlp>=1.41.1",
  "openinference-instrumentation-pydantic-ai>=0.1.12",
  "rich>=15.0.0",
]
